Change gradlew command from test to task

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
       run: chmod +x gradlew
 
     - name: Test with gradle
-      run: ./gradlew --info test
+      run: ./gradlew --info task
 
     - name: Spring boot 실행 파일 생성
       run: ./gradlew bootJar
