--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,7 +33,7 @@ jobs:
       run: ./gradlew bootJar
 
     - name: docker image 생성
-      run: docker build -t ${{env.DOCKER_USERNAME}}u/devops_step2:v1.0 .
+      run: docker build -t ${{env.DOCKER_USERNAME}}/devops_step2:v1.0 .
 
     - name: docker login
       uses: docker/login-action@v1
