--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -58,3 +58,7 @@ jobs:
       - name: docker image pull
         run: docker pull ${{env.DOCKER_USERNAME}}/devops_step2:v1.0
         
+      - name: docker compose 실행
+        run: |
+          cd /home/kosa/Infra_devops_step02 #경로를 지정해줘야함.
+          docker compose -f docker-compose_nginx.yml up
