--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,6 +49,14 @@ jobs:
     name: Deploy
     runs-on: self-hosted
     steps:
+          
+      - uses: actions/checkout@v3 # copy yml file from src
+        with:
+          sparse-checkout: |
+            docker-compose_nginx.yml
+          sparse-checkout-cone-mode: false
+          clean: true
+
       - name: docker login
         uses: docker/login-action@v1
         with:
@@ -61,4 +69,4 @@ jobs:
       - name: docker compose 실행
         run: |
           cd /home/kosa/Infra_devops_step02 #경로를 지정해줘야함.
-          docker compose -f docker-compose_nginx.yml up -d # 포그라운드로 돌면 터미널 끊기면 안되기에,, 백그라운드로 돌도록 함
+          docker compose -f docker-compose_nginx.yml up -d  # 포그라운드로 돌면 터미널 끊기면 안되기에,, 백그라운드로 돌도록 함
