--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,7 +33,7 @@ jobs:
       run: ./gradlew bootJar
 
     - name: docker image 생성
-      run: docker build -t ${{env.DOCKER_USERNAME}}/devops_step2:v1.0 .
+      run: docker build -t ${{env.DOCKER_USERNAME}}/devops_step2:latest .
 
     - name: docker login
       uses: docker/login-action@v1
@@ -42,7 +42,7 @@ jobs:
         password: ${{env.DOCKER_PASSWORD}}
 
     - name: docker image 허브에 저장
-      run: docker push ${{env.DOCKER_USERNAME}}/devops_step2:v1.0
+      run: docker push ${{env.DOCKER_USERNAME}}/devops_step2:latest
     
   deploy:
     needs: build
@@ -65,7 +65,7 @@ jobs:
           password: ${{env.DOCKER_PASSWORD}}
 
       - name: docker image pull
-        run: docker pull ${{env.DOCKER_USERNAME}}/devops_step2:v1.0
+        run: docker pull ${{env.DOCKER_USERNAME}}/devops_step2:latest
         
       - name: docker compose 실행
         run: |
