--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,19 +10,20 @@ env:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     steps:
     #소스 복사
     #- name: 소스 복사
-    # run: git clone 머시기!!!
-    - uses: actions/checkout@v3
+    # run: git clone 머시기!!!devops_step2
+    # - uses: actions/checkout@v3
 
-    - name: Setup JDK17
-      uses: actions/setup-java@v3
-      with:
-        java-version: '17'
-        distribution: 'temurin'
+    # - name: Setup JDK17 # 자바를 개발서버 pc(master)에 직접 설치했기에 필요없는 단계
+    #   uses: actions/setup-java@v3
+    #   with:
+    #     java-version: '17'
+    #     distribution: 'temurin'
+
     - name: gradlew 파일 실행 권한 설정
       run: chmod +x gradlew
 
