--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,10 +13,14 @@ jobs:
     runs-on: self-hosted
 
     steps:
-    #소스 복사
-    #- name: 소스 복사
-    # run: git clone 머시기!!!devops_step2
-    - uses: actions/checkout@v3
+    
+    - name: 폴더 정리
+      run: rm -rf Infra_devops_step02
+
+    - name: 소스 복사
+      run: git clone https://github.com/chaeyeonKong/Infra_devops_step02
+
+    # - uses: actions/checkout@v3
 
     # - name: Setup JDK17 # 자바를 개발서버 pc(master)에 직접 설치했기에 필요없는 단계
     #   uses: actions/setup-java@v3
@@ -25,16 +29,16 @@ jobs:
     #     distribution: 'temurin'
 
     - name: gradlew 파일 실행 권한 설정
-      run: chmod +x gradlew
+      run: chmod +x Infra_devops_step02/gradlew
 
     - name: Test with gradle
-      run: ./gradlew --info task
+      run: ./Infra_devops_step02/gradlew --info task
 
     - name: Spring boot 실행 파일 생성
-      run: ./gradlew bootJar
+      run: ./Infra_devops_step02/gradlew bootJar
 
     - name: docker image 생성
-      run: docker build -t ${{env.DOCKER_USERNAME}}/devops_step2:latest .
+      run: docker build -t ${{env.DOCKER_USERNAME}}/devops_step2:latest ./Infra_devops_step02
 
     - name: docker login
       uses: docker/login-action@v1
