--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,17 +28,29 @@ jobs:
     #     java-version: '17'
     #     distribution: 'temurin'
 
+    - name: 경로 변경
+      run: cd Infra_devops_step02
+
+
     - name: gradlew 파일 실행 권한 설정
-      run: chmod +x Infra_devops_step02/gradlew
+      run: |
+        cd Infra_devops_step02
+        chmod +x gradlew
 
     - name: Test with gradle
-      run: ./Infra_devops_step02/gradlew --info task
+      run: |
+        cd Infra_devops_step02
+        ./gradlew --info task
 
     - name: Spring boot 실행 파일 생성
-      run: ./Infra_devops_step02/gradlew bootJar
+      run: |
+        cd Infra_devops_step02
+        ./gradlew bootJar
 
     - name: docker image 생성
-      run: docker build -t ${{env.DOCKER_USERNAME}}/devops_step2:latest ./Infra_devops_step02
+      run: |
+        cd Infra_devops_step02
+        docker build -t ${{env.DOCKER_USERNAME}}/devops_step2:latest ./Infra_devops_step02
 
     - name: docker login
       uses: docker/login-action@v1
