--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,61 +13,57 @@ jobs:
     runs-on: self-hosted
 
     steps:
-    
-    - name: 폴더 정리
-      run: rm -rf Infra_devops_step02
+      
+      - name: 폴더 정리
+        run: rm -rf Infra_devops_step02
 
-    - name: 소스 복사
-      run: git clone https://github.com/chaeyeonKong/Infra_devops_step02
+      - name: 소스 복사
+        run: git clone https://github.com/chaeyeonKong/Infra_devops_step02
 
-    # - uses: actions/checkout@v3
+      # - uses: actions/checkout@v3
 
-    # - name: Setup JDK17 # 자바를 개발서버 pc(master)에 직접 설치했기에 필요없는 단계
-    #   uses: actions/setup-java@v3
-    #   with:
-    #     java-version: '17'
-    #     distribution: 'temurin'
+      # - name: Setup JDK17 # 자바를 개발서버 pc(master)에 직접 설치했기에 필요없는 단계
+      #   uses: actions/setup-java@v3
+      #   with:
+      #     java-version: '17'
+      #     distribution: 'temurin'
 
-    - name: 경로 변경
-      run: cd Infra_devops_step02
+      - name: gradlew 파일 실행 권한 설정
+        run: |
+          cd Infra_devops_step02
+          chmod +x gradlew
 
+      - name: Test with gradle
+        run: |
+          cd Infra_devops_step02
+          ./gradlew --info task
 
-    - name: gradlew 파일 실행 권한 설정
-      run: |
-        cd Infra_devops_step02
-        chmod +x gradlew
+      - name: Spring boot 실행 파일 생성
+        run: |
+          cd Infra_devops_step02
+          ./gradlew bootJar
 
-    - name: Test with gradle
-      run: |
-        cd Infra_devops_step02
-        ./gradlew --info task
+      - name: docker image 생성
+        run: |
+          cd Infra_devops_step02
+          docker build -t ${{env.DOCKER_USERNAME}}/devops_step2:latest .
 
-    - name: Spring boot 실행 파일 생성
-      run: |
-        cd Infra_devops_step02
-        ./gradlew bootJar
+      - name: docker login
+        uses: docker/login-action@v1
+        with:
+          username: ${{env.DOCKER_USERNAME}}
+          password: ${{env.DOCKER_PASSWORD}}
 
-    - name: docker image 생성
-      run: |
-        cd Infra_devops_step02
-        docker build -t ${{env.DOCKER_USERNAME}}/devops_step2:latest ./Infra_devops_step02
-
-    - name: docker login
-      uses: docker/login-action@v1
-      with:
-        username: ${{env.DOCKER_USERNAME}}
-        password: ${{env.DOCKER_PASSWORD}}
-
-    - name: docker image 허브에 저장
-      run: docker push ${{env.DOCKER_USERNAME}}/devops_step2:latest
-    
-    - name: 파일 업로드 (use artifact)
-      uses: actions/upload-artifact@v4
-      with:
-        name: my-artifact
-        path: |
-          docker-compose_nginx.yml
-          nginx/nginx.conf
+      - name: docker image 허브에 저장
+        run: docker push ${{env.DOCKER_USERNAME}}/devops_step2:latest
+      
+      - name: 파일 업로드 (use artifact)
+        uses: actions/upload-artifact@v4
+        with:
+          name: my-artifact
+          path: |
+            Infra_devops_step02/docker-compose_nginx.yml
+            Infra_devops_step02/nginx/nginx.conf
         
   deploy:
     needs: build
