--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,95 +5,98 @@ on:
     branches: [ main ]
 
 env:
-  DOCKER_USERNAME: ${{secrets.DOCKER_USERNAME}}
-  DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
-
+  DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+  DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+  
 jobs:
   build:
+#    runs-on: ubuntu-latest
     runs-on: self-hosted
 
     steps:
-      
-      - name: 폴더 정리
-        run: rm -rf Infra_devops_step02
+    # 소스 복사 
+    #- name: 소스 복사 
+    #  run: git clone https://github.com/chaeyeonKong/Infra_devops_step02
+    #- uses: actions/checkout@v3
 
-      - name: 소스 복사
-        run: git clone https://github.com/chaeyeonKong/Infra_devops_step02
-
-      # - uses: actions/checkout@v3
-
-      # - name: Setup JDK17 # 자바를 개발서버 pc(master)에 직접 설치했기에 필요없는 단계
-      #   uses: actions/setup-java@v3
-      #   with:
-      #     java-version: '17'
-      #     distribution: 'temurin'
-
-      - name: gradlew 파일 실행 권한 설정
-        run: |
-          cd Infra_devops_step02
-          chmod +x gradlew
-
-      - name: Test with gradle
-        run: |
-          cd Infra_devops_step02
-          ./gradlew --info test
-
-      - name: Spring boot 실행 파일 생성
-        run: |
-          cd Infra_devops_step02
-          ./gradlew bootJar
-
-      - name: docker image 생성
-        run: |
-          cd Infra_devops_step02
-          docker build -t ${{env.DOCKER_USERNAME}}/devops_step2:latest .
-
-      - name: docker login
-        uses: docker/login-action@v1
-        with:
-          username: ${{env.DOCKER_USERNAME}}
-          password: ${{env.DOCKER_PASSWORD}}
-
-      - name: docker image 허브에 저장
-        run: docker push ${{env.DOCKER_USERNAME}}/devops_step2:latest
-      
-      - name: 파일 업로드 (use artifact)
-        uses: actions/upload-artifact@v4
-        with:
-          name: my-artifact
-          path: |
-            Infra_devops_step02/docker-compose_nginx.yml
-            Infra_devops_step02/nginx/nginx.conf
+    - name: 폴더 정리  
+      run: rm -rf Infra_devops_step02
+  
+    - name: 소스 복사 
+      run: git clone https://github.com/chaeyeonKong/Infra_devops_step02
+  
+    #- name: Setup JDK17  # 자바를 개발서버 pc(master)에 직접 설치했기에 필요없는 단계
+    #  uses: actions/setup-java@v3
+    #  with:
+    #    java-version: '17'
+    #    distribution: 'temurin'
+    
+    - name: gradlew 파일 실행 권한 설정 
+      run: |
+        cd Infra_devops_step02
+        chmod +x gradlew
         
+    - name: Test with gradle
+      run: |
+        cd Infra_devops_step02
+        ./gradlew --info test
+     
+    - name: Spring boot 실행 파일 생성
+      run: |
+        cd Infra_devops_step02
+        ./gradlew bootJar 
+        
+    - name: docker image 생성 
+      run: |
+        cd Infra_devops_step02
+        docker build -t ${{ env.DOCKER_USERNAME }}/devops_step2:latest .
+
+    - name: docker login
+      uses: docker/login-action@v1
+      with:
+        username: ${{ env.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+        
+    - name: docker image 허브에 저장 
+      run: docker push ${{ env.DOCKER_USERNAME }}/devops_step2:latest
+    
+    - name: 파일 업로드  (use artifact)
+      uses: actions/upload-artifact@v4
+      with:
+        name: my-artifact
+        path: |
+          Infra_devops_step02/docker-compose_nginx.yml
+          Infra_devops_step02/nginx/nginx.conf
+
   deploy:
     needs: build
     name: Deploy
     runs-on: self-hosted
+
     steps:
-          
-      # - uses: actions/checkout@v3 # copy yml file from src
-      #   with:
-      #     sparse-checkout: |
-      #       docker-compose_nginx.yml
-      #       nginx/nginx.conf
-      #     sparse-checkout-cone-mode: false
-      #     clean: true
-      
-      - name: 파일 다운로드 (use artifact)
-        uses: actions/download-artifact@v4
-        with:
-          name: my-artifact
+      # copy yml file from src 
+      #- uses: actions/checkout@v3
+      #  with:
+      #    sparse-checkout: |
+      #      docker-compose_nginx.yml
+      #      nginx/nginx.conf
+      #    sparse-checkout-cone-mode: false
+      #    clean: true
 
+    - name: 파일 다운로드 (use artifact)
+      uses: actions/download-artifact@v4
+      with:
+        name: my-artifact
 
-      - name: docker login
-        uses: docker/login-action@v1
-        with:
-          username: ${{env.DOCKER_USERNAME}}
-          password: ${{env.DOCKER_PASSWORD}}
+    - name: docker login
+      uses: docker/login-action@v1
+      with:
+        username: ${{ env.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: docker image pull
-        run: docker pull ${{env.DOCKER_USERNAME}}/devops_step2:latest
-        
-      - name: docker compose 실행
-        run: |
-          docker compose -f docker-compose_nginx.yml up -d  # 포그라운드로 돌면 터미널 끊기면 안되기에,, 백그라운드로 돌도록 함
+    - name: docker image pull
+      run: docker pull ${{ env.DOCKER_USERNAME }}/devops_step2:latest
+
+    - name: docker compose 실행
+      run: docker compose -f docker-compose_nginx.yml up -d
+       # 포그라운드로 돌면 터미널 끊기면 안되기에,, 백그라운드로 돌도록 함
