--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -85,20 +85,27 @@ jobs:
       #    sparse-checkout-cone-mode: false
       #    clean: true
 
-    - name: 파일 다운로드 (use artifact)
-      uses: actions/download-artifact@v4
-      with:
-        name: my-artifact
+    # - name: 파일 다운로드 (use artifact)
+    #   uses: actions/download-artifact@v4
+    #   with:
+    #     name: my-artifact
 
-    - name: docker login
-      uses: docker/login-action@v1
-      with:
-        username: ${{ env.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+    # - name: docker login
+    #   uses: docker/login-action@v1
+    #   with:
+    #     username: ${{ env.DOCKER_USERNAME }}
+    #     password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: docker image pull
-      run: docker pull ${{ env.DOCKER_USERNAME }}/devops_step2:latest
+    # - name: docker image pull
+    #   run: docker pull ${{ env.DOCKER_USERNAME }}/devops_step2:latest
 
-    - name: docker compose 실행
-      run: docker compose -f docker-compose_nginx.yml up -d
-       # 포그라운드로 돌면 터미널 끊기면 안되기에,, 백그라운드로 돌도록 함
+    # - name: docker compose 실행
+    #   run: docker compose -f docker-compose_nginx.yml up -d
+    #    # 포그라운드로 돌면 터미널 끊기면 안되기에,, 백그라운드로 돌도록 함
+
+    - name: 운영 서버로 file 복사 및 실행
+      run: |
+        cd Infra_devops_step02
+        scp ./docker-compose_nginx.yml aws-mater
+        scp -r ./nginx/nginx.config aws-master
+        ssh aws-master ./run.sh > /dev/null
